# rust-playground

./: Cargo.toml
advanced/: Cargo.toml
advanced/src/: lib.rs  macros.rs  traits.rs  types.rs  unsafe_foo.rs
cargo_crates/: Cargo.toml
cargo_crates/src/: cargo_crates.rs  lib.rs
clock/: Cargo.toml
clock/src/: main.rs
codewars/: Cargo.toml
codewars/src/: lib.rs
collections/: Cargo.toml
collections/src/: lib.rs
common_programming_concepts/: Cargo.toml
common_programming_concepts/src/: lib.rs
concurrency/: Cargo.toml
concurrency/src/: main.rs
coordinates/: Cargo.toml
coordinates/src/: lib.rs
custom_errors/: Cargo.toml
custom_errors/src/: main.rs
data_in_depth/: Cargo.toml
data_in_depth/src/: cpu.rs  lib.rs  memory.rs
dns/: Cargo.toml
dns/src/: main.rs
enums/: Cargo.toml
enums/src/: lib.rs
error_handling/: Cargo.toml
error_handling/src/: lib.rs
files/: Cargo.toml
files/src/: lib.rs
generics/: Cargo.toml
generics/src/: lib.rs
hello/src/: lib.rs
hello_macro/: Cargo.toml
hello_macro_derive/: Cargo.toml
hello_macro_derive/src/: lib.rs
hexdump/src/: main.rs
intersecting-rays/: Cargo.toml
intersecting-rays/src/: lib.rs
iterators_closures/: Cargo.toml
iterators_closures/src/: closures.rs  iterators.rs  lib.rs
kvstore/: Cargo.toml  my.kv
kvstore/src/: kvs_disk.rs  kvs_mem.rs  lib.rs
linked_lists/: Cargo.toml
linked_lists/src/: doubly_linked_list.rs  lib.rs  persistent_singly_linked.rs  singly_linked.rs  unsafe_singly_linked_queue.rs
macgen/src/: main.rs
networking/: Cargo.toml
networking/src/: lib.rs
oop/: Cargo.toml
oop/src/: lib.rs  state.rs  state_types.rs  trait_objects.rs
ownership/: Cargo.toml
ownership/src/: lib.rs
particles/: Cargo.toml  alloc.tsv
particles/src/: main.rs
pattern_matching/: Cargo.toml
pattern_matching/src/: lib.rs
smart_pointers/: Cargo.toml
smart_pointers/src/: box_example.rs  cell.rs  lib.rs  rc.rs  rc_example.rs  refcell.rs  refcell_example.rs  reference_cycle.rs  weak_references.rs
src/: lib.rs
src/cargo_crates/: cargo_crates.rs  mod.rs
src/collections/: collections.rs
src/enums/: enums.rs
src/generics/: generics.rs  mod.rs
src/iterators_closures/: iterator_closures.rs  mod.rs
src/smart_pointers/: box_example.rs  cell.rs  mod.rs  rc.rs  rc_example.rs  refcell.rs  refcell_example.rs  reference_cycle.rs  weak.rs  weak_references.rs
str_left_pad/: Cargo.toml
str_left_pad/src/: lib.rs
structs/: Cargo.toml
structs/src/: lib.rs
threads/: Cargo.toml
threads/src/: main.rs
traits/: Cargo.toml
traits/src/: generic_impl.rs  iterator.rs  lib.rs  send_sync.rs  sized.rs  subtrait.rs  trait_objects.rs
webserver/: Cargo.toml
webserver/src/: lib.rs
