[workspace]

members = [
    "common_programming_concepts", # chapter 3
    "ownership", # chapter 4
    "structs", # chapter 5
    "enums", # chapter 6
    "collections", # chapter 8
    "error_handling", # chapter 9
    "generics", # chapter 10
    "iterators_closures", # chapter 13
    "cargo_crates", # chapter 14
    "smart_pointers", # chapter 15
    "concurrency", # chapter 16
]

