[workspace]

members = [
    "common_programming_concepts", # chapter 3
    "ownership",                   # chapter 4
    "structs",                     # chapter 5
    "enums",                       # chapter 6
    "collections",                 # chapter 8
    "error_handling",              # chapter 9
    "generics",                    # chapter 10
    "iterators_closures",          # chapter 13
    "cargo_crates",                # chapter 14
    "smart_pointers",              # chapter 15
    "concurrency",                 # chapter 16
    "oop",                         # chapter 17
    "pattern_matching",            # chapter 18,
    "advanced",                    # chapter 19
    "hello_macro",                 # chapter 19
    "hello_macro_derive",          # chapter 19
    "webserver",                   # chapter 20
    "linked_lists",                # Ryan Levick https://www.youtube.com/watch?v=IiDHTIsmUi4
    "traits",                      # https://github.com/pretzelhammer/rust-blog/blob/master/posts/tour-of-rusts-standard-library-traits.md
    "str_left_pad",                # Coding challenge 4 by Tim McNamara
    "coordinates",                 # Coding challenge 5 by Tim McNamara
    "data_in_depth",               # Chapter 5 of Rust in Action
    "particles",                   # Chapter 6 of Rust in Action
    "files",                       # Chapter 7 of Rust in Action
    "hexdump",                     # Chapter 7 of Rust in Action
    "kvstore",                     # Chapter 7 of Rust in Action
    "intersecting-rays",           # Coding challenge 9 by Tim McNamara
    "networking",                  # Chapter 8 of Rust in Action
    "dns",                         # Chapter 8 of Rust in Action (DNS resolver)
    "codewars",                    # Codewars exercises
    "custom_errors",               # Chapter 8 of Rust in Action
    "macgen",                      # Chapter 8 of Rust in Action
    "clock",                       # Chapter 9 of Rust in Action
]
